formated mod loader and made CircularArrayList extends AbstractCollection